// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Character Component renders correctly 1`] = `
<DocumentFragment>
  <div
    class="character-page bg-gray-100"
  >
    <div
      class="thumbnail-image bg-cover bg-center"
      style="background-image: url();"
    >
      <div
        class="character-information p-8"
      >
        <div
          class="character-page-headings"
        >
          <h3
            class="text-3xl text-center"
          />
          <h5
            class="text-lg text-center"
          >
            List of comics for this character:
          </h5>
        </div>
        <div>
          <div
            class="fixed inset-0 flex items-center justify-center bg-white bg-opacity-90"
          >
            <div
              class="w-16 h-16 border-8 border-blue-500 border-t-transparent border-r-transparent rounded-full animate-spin"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Character renders correctly 1`] = `
<DocumentFragment>
  <div
    class="character-page bg-gray-100"
  >
    <div
      class="thumbnail-image bg-cover bg-center"
      style="background-image: url(http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg);"
    >
      <div
        class="character-information p-8"
      >
        <div
          class="character-page-headings"
        >
          <h3
            class="text-3xl text-center"
          >
            3-D Man
          </h3>
          <h5
            class="text-lg text-center"
          >
            List of comics for this character:
          </h5>
        </div>
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
